--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 ﻿# Required metadata
-sonar.projectKey=asienicki_PESEL:master
+sonar.projectKey=asienicki_PESEL
 sonar.projectName=Rss-service
 sonar.projectVersion=1.0
 
