copy paste = design error

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 ﻿# Required metadata
 sonar.projectKey=asienicki_PESEL
-sonar.projectName=Rss-service
+sonar.projectName=PESEL
 sonar.projectVersion=1.0
 
 sonar.dotnet.visualstudio.solution.file=PESEL.sln
