--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
-dist: trusty
+#os: windows
+#dist: trusty
 language: csharp
 solution: PESEL.sln
 install:
   - nuget restore PESEL.sln
 script:
-  - xbuild /p:Configuration=Release PESEL.sln /p:TargetFrameworkVersion="v4.7.2"
+  - msbuild /p:Configuration=Release PESEL.sln
+  #- xbuild /p:Configuration=Release PESEL.sln /p:TargetFrameworkVersion="v4.7.2"
   - sonar-scanner
   
 addons:
