--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,8 @@
 sonar.projectKey=asienicki_PESEL
 sonar.projectName=PESEL
 sonar.projectVersion=1.0
+sonar.organization=asienicki-github
+sonar.host.url=https://sonarcloud.io
 
 sonar.dotnet.visualstudio.solution.file=PESEL.sln
 sonar.dotnet.excludeGeneratedCode=true
@@ -14,6 +16,7 @@ sonar.language=cs
 
 # SQ standard properties
 sonar.sources=.
+sonar.login=$h
 
 # exclusions
 # Properties/AssemblyInfo.cs
@@ -22,7 +25,7 @@ sonar.sources=.
 # Tests
 # WCF generated service contracts
 # nuget packages
-sonar.exclusions=**/Properties/*.cs,**/*.g.cs,**/obj/**.cs,**/MiniMods/*.cs,**/Tests/**/*.cs,**/Service References/**.cs,**/packages/**.*,**/*_Should.cs
+# sonar.exclusions=**/Properties/*.cs,**/*.g.cs,**/obj/**.cs,**/MiniMods/*.cs,**/Tests/**/*.cs,**/Service References/**.cs,**/packages/**.*,**/*_Should.cs
 
 # Enable the Visual Studio bootstrapper
 sonar.visualstudio.enable=true
