--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ install:
   - nuget restore PESEL.sln
 script:
   - msbuild /p:Configuration=Release PESEL.sln
-  #- xbuild /p:Configuration=Release PESEL.sln /p:TargetFrameworkVersion="v4.7.2"
-  - sonar-scanner
+#- xbuild /p:Configuration=Release PESEL.sln /p:TargetFrameworkVersion="v4.7.2"
+#- sonar-scanner
+  - sonar-scanner -Dsonar.verbose=true -X
   
 addons:
   sonarcloud:
     organization: "asienicki-github"
-    token:
-      secure: $h
+    token: $h
+#    token:
+#      secure: $h
