--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,6 @@ before_build:
  - nuget restore
 build_script:
  - choco install "sonarscanner-msbuild-net46" -y
- - SonarScanner.MSBuild.exe begin /k:"asienicki_PESEL" /d:"sonar.host.url=https://sonarcloud.io" /o:"asienicki-github" /d:"sonar.login=" + $env:sonar_token
+ - SonarScanner.MSBuild.exe begin /k:"asienicki_PESEL" /d:"sonar.host.url=https://sonarcloud.io" /o:"asienicki-github" /d:"sonar.login=$(sonar_token)"
  - msbuild /verbosity:quiet "PESEL.sln"
- - SonarScanner.MSBuild.exe end /d:"sonar.login="+ $env:sonar_token
+ - SonarScanner.MSBuild.exe end /d:"sonar.login=$(sonar_token)"
