--- a/PESEL.Tests/PESEL.Tests.csproj
+++ b/PESEL.Tests/PESEL.Tests.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model.cs" />
+    <Compile Include="ModelTests.cs" />
     <Compile Include="PeselValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
