--- a/PESEL/PESEL.csproj
+++ b/PESEL/PESEL.csproj
@@ -1,81 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{520DEA8A-555B-4407-830D-BC8ADF115848}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PESEL</RootNamespace>
-    <AssemblyName>PESEL</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageProjectUrl>https://github.com/asienicki/PESEL</PackageProjectUrl>
+    <Description>Powszechny Elektroniczny System Ewidencji Ludności (PESEL). Projekt udostępniający walidację oraz generowanie numerów PESEL.</Description>
+    <Summary>Powszechny Elektroniczny System Ewidencji Ludności (PESEL). Projekt udostępniający walidację oraz generowanie numerów PESEL.</Summary>
+    <Company>Software Hero</Company>
+    <Authors>Artur Sienicki</Authors>
+    <Version>1.0.3</Version>
+    <Copyright>Software Hero</Copyright>
+    <Title>PESEL</Title>
+    <PackageLicenseExpression></PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/asienicki/PESEL</RepositoryUrl>
+    <PackageReleaseNotes>Changed to .NET Standard 2.0.
+https://github.com/asienicki/PESEL/issues/19</PackageReleaseNotes>
+    <PackageTags>.NET Standard</PackageTags>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.3.0" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Attributes\PeselAttribute.cs" />
-    <Compile Include="Generator.cs" />
-    <Compile Include="ValidationResults\Impl\CharsNotDigitValidationResult.cs" />
-    <Compile Include="ValidationResults\Impl\FailValidationResult.cs" />
-    <Compile Include="ValidationResults\Impl\InvalidCheckSumValidationResult.cs" />
-    <Compile Include="ValidationResults\Impl\InvalidDateValidator.cs" />
-    <Compile Include="ValidationResults\Impl\InvalidGenderValidationResult.cs" />
-    <Compile Include="ValidationResults\Impl\OkValidationResult.cs" />
-    <Compile Include="ValidationResults\IValidationResult.cs" />
-    <Compile Include="ValidationResults\Impl\StringIsNullOrEmptyValidationResult.cs" />
-    <Compile Include="CheckSumCalculator.cs" />
-    <Compile Include="Validators\Impl\BirthDateValidator.cs" />
-    <Compile Include="Validators\Impl\CompositeValidator.cs" />
-    <Compile Include="Validators\Impl\DigitValidator.cs" />
-    <Compile Include="Models\Entity.cs" />
-    <Compile Include="Validators\Factories\Impl\FactoryValidator.cs" />
-    <Compile Include="Models\Gender.cs" />
-    <Compile Include="Validators\Factories\IFactoryValidator.cs" />
-    <Compile Include="Validators\Impl\GenderValidator.cs" />
-    <Compile Include="Validators\Impl\LengthValidator.cs" />
-    <Compile Include="Validators\Impl\RandomNumbersValidator.cs" />
-    <Compile Include="Validators\Impl\StringIsNullOrEmptyValidator.cs" />
-    <Compile Include="Validators\Impl\SumControlNumberValidator.cs" />
-    <Compile Include="Validators\IValidator.cs" />
-    <Compile Include="Models\Pesel.cs" />
-    <Compile Include="Validators\Impl\PeselValidator.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValidationResults\Impl\ValidationResult.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="PESEL.nuspec">
-      <SubType>Designer</SubType>
+    <None Include="..\LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
     </None>
-    <None Include="readme.md" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
