--- a/PESEL/PESEL.csproj
+++ b/PESEL/PESEL.csproj
@@ -1,26 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <PackageProjectUrl>https://github.com/asienicki/PESEL</PackageProjectUrl>
     <Description>Powszechny Elektroniczny System Ewidencji Ludności (PESEL). Projekt udostępniający walidację oraz generowanie numerów PESEL.</Description>
     <Summary>Powszechny Elektroniczny System Ewidencji Ludności (PESEL). Projekt udostępniający walidację oraz generowanie numerów PESEL.</Summary>
     <Company>Software Hero</Company>
     <Authors>Artur Sienicki</Authors>
-    <Version>1.0.3</Version>
+    <Version>2.0.0</Version>
     <Copyright>Software Hero</Copyright>
     <Title>PESEL</Title>
     <PackageLicenseExpression></PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/asienicki/PESEL</RepositoryUrl>
-    <PackageReleaseNotes>Changed to .NET Standard 2.0.
-https://github.com/asienicki/PESEL/issues/19</PackageReleaseNotes>
-    <PackageTags>.NET Standard</PackageTags>
+	<RepositoryType>git</RepositoryType>
+	<RepositoryUrl>https://github.com/asienicki/PESEL</RepositoryUrl>
+    <PackageReleaseNotes>Przeniosłem PeselAttribute do osobnej biblioteki: PESEL.System.ComponentModel.DataAnnotations. Klasę Generator przeniosłem do biblioteki PESEL.Generator.</PackageReleaseNotes>
+    <PackageTags></PackageTags>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.3.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\LICENSE.md">
@@ -28,5 +25,8 @@ https://github.com/asienicki/PESEL/issues/19</PackageReleaseNotes>
       <PackagePath></PackagePath>
     </None>
   </ItemGroup>
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 
 </Project>
