harden PESEL domain with full validator pipeline, contracts and tests
- Rewrite birth date validation and fix century handling
- Introduce PeselChecksumCalculator with explicit failure modes
- Add domain, contract, integration and smoke test suites
- Document validator preconditions via contract tests
- Split projections vs validations in domain tests
- Deprecate legacy CheckSumCalculator
- Clean up validation results (InvalidDate / InvalidMonth / NullEntity)
- Improve DigitValidator implementation
- Add extensive PESEL corpus test data

--- a/PESEL.FluentValidation/PESEL.FluentValidation.csproj
+++ b/PESEL.FluentValidation/PESEL.FluentValidation.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
 	  <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+	  <LangVersion>14.0</LangVersion>
 	  <Description>Rozszerzenie do FluentValidation dla biblioteki PESEL</Description>
 	  <Summary>Powszechny Elektroniczny System Ewidencji Ludności (PESEL). Projekt udostępniający walidację oraz generowanie numerów PESEL.</Summary>
 	  <Company>Software Hero</Company>
@@ -25,11 +26,11 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<None Include="README.md" Pack="true" PackagePath="\"/>
+		<None Include="README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 	
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="FluentValidation" Version="11.12.0" />
     <PackageReference Include="PESEL" Version="2.0.0" />
   </ItemGroup>
 
