--- a/PESEL.Generator/PESEL.Generator.csproj
+++ b/PESEL.Generator/PESEL.Generator.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
 	  <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+	  <LangVersion>latest</LangVersion>
 	  <PackageProjectUrl>https://github.com/asienicki/PESEL</PackageProjectUrl>
 	  <Description>Biblioteka umożliwiająca generowanie numerów PESEL</Description>
 	  <Summary>Powszechny Elektroniczny System Ewidencji Ludności (PESEL). Biblioteka udostępniająca generowanie numerów PESEL.</Summary>
