--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,10 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
 
-    - name: Setup .NET 10
+    - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 10.0.x
@@ -28,5 +26,10 @@ jobs:
       run: dotnet restore PESEL.sln
     - name: Build
       run: dotnet build PESEL.sln --no-restore
-    - name: Test
-      run: dotnet test PESEL.sln --no-build --verbosity normal
+      
+    - name: Test with coverage
+      run: |
+        dotnet test PESEL.sln \
+          --no-build \
+          --collect:"XPlat Code Coverage" \
+          --results-directory coverage
