--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -31,13 +31,16 @@ jobs:
         ls -R .
         echo "----"
         find . -name "*.xml" || true
-
+    
+    - name: Install ReportGenerator
+      run: dotnet tool install --global dotnet-reportgenerator-globaltool
+    
     - name: Generate coverage badge
-      uses: danielpalme/ReportGenerator-GitHub-Action@5
-      with:
-        reports: coverage/**/*.xml
-        targetdir: coveragereport
-        reporttypes: Svg
+      run: |
+        reportgenerator \
+          -reports:coverage/**/coverage.cobertura.xml \
+          -targetdir:coveragereport \
+          -reporttypes:Badge
 
     - name: Publish badge
       run: |
