--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -25,15 +25,17 @@ jobs:
     - name: Test with coverage
       run: |
         dotnet test PESEL.sln \
-          --collect:"XPlat Code Coverage" \
-          --results-directory coverage
+          /p:CollectCoverage=true \
+          /p:CoverletOutput=coverage/ \
+          /p:CoverletOutputFormat=opencover
 
     - name: Analyze with SonarCloud
-      uses: SonarSource/sonarcloud-github-action@v2
+      uses: SonarSource/sonarcloud-github-action@ffc3010689be73b8e5ae0c57ce35968afd7909e8
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
         args: >
           -Dsonar.projectKey=asienicki_PESEL
           -Dsonar.organization=asienicki
-          -Dsonar.cs.opencover.reportsPaths=coverage/**/coverage.cobertura.xml
+          -Dsonar.cs.opencover.reportsPaths=coverage/coverage.opencover.xml
+
