--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -29,13 +29,13 @@ jobs:
           /p:CoverletOutput=coverage/ \
           /p:CoverletOutputFormat=opencover
 
+    - name: Debug coverage files
+      run: |
+        echo "== coverage directory =="
+        ls -R coverage || true
+
     - name: Analyze with SonarCloud
       uses: SonarSource/sonarcloud-github-action@ffc3010689be73b8e5ae0c57ce35968afd7909e8
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        args: >
-          -Dsonar.projectKey=asienicki_PESEL
-          -Dsonar.organization=asienicki
-          -Dsonar.cs.opencover.reportsPaths=coverage/coverage.opencover.xml
 
