--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         dotnet test PESEL.sln \
           /p:CollectCoverage=true \
-          /p:CoverletOutput=coverage/ \
+          /p:CoverletOutput=$(pwd)/coverage/coverage.opencover.xml \
           /p:CoverletOutputFormat=opencover
 
     - name: Debug coverage files
