--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -24,10 +24,12 @@ jobs:
 
     - name: Install SonarScanner for .NET
       run: dotnet tool install --global dotnet-sonarscanner
-
+    
     - name: Sonar Begin
       run: |
         dotnet sonarscanner begin \
+          /k:"asienicki_PESEL" \
+          /o:"asienicki" \
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
           /d:sonar.cs.opencover.reportsPaths="coverage/coverage.opencover.xml"
 
