--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -46,7 +46,7 @@ jobs:
         cp coveragereport/badge_combined.svg badges/coverage.svg
 
     - name: Commit badge
-      uses: EndBug/add-and-commit@v9
+      uses: EndBug/add-and-commit@a94899bca583c204427a224a7af87c02f9b325d5
       with:
         add: badges/coverage.svg
         message: "chore: update coverage badge"
