--- a/PESEL/PESEL.csproj
+++ b/PESEL/PESEL.csproj
@@ -17,6 +17,6 @@
 	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 	<ItemGroup>
-    	<None Include="README.md" Pack="true" />
+       <None Include="README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 </Project>
