ci(nuget): fix duplicate PESEL assembly by separating dev and pack references
- enable IsPacking flag in RC workflow
- remove hardcoded versions from dependent projects
- switch to ProjectReference for local dev and PackageReference for packing
- clean up NuGet metadata (license, tags, README)
- align package ownership and metadata

--- a/.github/workflows/release-rc.yml
+++ b/.github/workflows/release-rc.yml
@@ -127,6 +127,7 @@ jobs:
           echo "Packing NuGet version: ${{ steps.version.outputs.version }}"
           dotnet pack -c Release \
             /p:Version=${{ steps.version.outputs.version }} \
+            /p:IsPacking=true \
             -o ./nupkg
 
           echo "Generated packages:"
