--- a/PESEL.Generator/PESEL.Generator.csproj
+++ b/PESEL.Generator/PESEL.Generator.csproj
@@ -1,37 +1,39 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	  <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-	  <LangVersion>latest</LangVersion>
-	  <PackageProjectUrl>https://github.com/asienicki/PESEL</PackageProjectUrl>
-	  <Description>Biblioteka umożliwiająca generowanie numerów PESEL</Description>
-	  <Summary>Powszechny Elektroniczny System Ewidencji Ludności (PESEL). Biblioteka udostępniająca generowanie numerów PESEL.</Summary>
-	  <Company>Software Hero</Company>
-	  <Authors>Artur Sienicki</Authors>
-	  <Version>2.0.0</Version>
-	  <Copyright>Software Hero</Copyright>
-	  <Title>PESEL.Generator</Title>
-	  <PackageLicenseExpression></PackageLicenseExpression>
-	  <RepositoryType>git</RepositoryType>
-	  <RepositoryUrl>https://github.com/asienicki/PESEL</RepositoryUrl>
-	  <PackageReleaseNotes>Przeniosłem PeselAttribute do biblioteki: PESEL.System.ComponentModel.DataAnnotations</PackageReleaseNotes>
-	  <PackageTags></PackageTags>
-	  <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-	  <PackageReadmeFile>README.md</PackageReadmeFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+		<LangVersion>latest</LangVersion>
 
-	<ItemGroup>
-		<None Include="..\LICENSE.md">
-			<Pack>True</Pack>
-			<PackagePath></PackagePath>
-		</None>
-	</ItemGroup>
+		<Title>PESEL.Generator</Title>
+		<Description>Biblioteka umożliwiająca generowanie numerów PESEL.</Description>
+		<Summary>Biblioteka umożliwiająca generowanie numerów PESEL.</Summary>
 
+		<Company>Sharp Code</Company>
+		<Authors>Artur Sienicki</Authors>
+		<Copyright>Sharp Code</Copyright>
+
+		<PackageProjectUrl>https://github.com/asienicki/PESEL</PackageProjectUrl>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/asienicki/PESEL</RepositoryUrl>
+
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageTags>PESEL,generator,poland,identity</PackageTags>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+
+	<!-- README do paczki -->
 	<ItemGroup>
 		<None Include="README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
-	
-	<ItemGroup>
-		<PackageReference Include="PESEL" Version="2.0.0" />
+
+	<!-- Lokalny development -->
+	<ItemGroup Condition="'$(IsPacking)' != 'true'">
+		<ProjectReference Include="..\PESEL\PESEL.csproj" />
 	</ItemGroup>
+
+	<!-- Publikacja do NuGet -->
+	<ItemGroup Condition="'$(IsPacking)' == 'true'">
+		<PackageReference Include="PESEL" Version="2.0.1" />
+	</ItemGroup>
+
 </Project>
