--- a/PESEL.System.ComponentModel.DataAnnotations/PESEL.System.ComponentModel.DataAnnotations.csproj
+++ b/PESEL.System.ComponentModel.DataAnnotations/PESEL.System.ComponentModel.DataAnnotations.csproj
@@ -1,39 +1,44 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	  <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-	  <LangVersion>14.0</LangVersion>
-	  <PackageProjectUrl>https://github.com/asienicki/PESEL</PackageProjectUrl>
-	  <Description>Atrybut do walidacji numeru PESEL z wykorzystaniem System.ComponentModel.Annotations</Description>
-	  <Summary>Powszechny Elektroniczny System Ewidencji Ludności (PESEL). Biblioteka udostępniająca walidację oraz generowanie numerów PESEL.</Summary>
-	  <Company>Software Hero</Company>
-	  <Authors>Artur Sienicki</Authors>
-	  <Version>2.0.0</Version>
-	  <Copyright>Software Hero</Copyright>
-	  <Title>PESEL.System.ComponentModel.DataAnnotations</Title>
-	  <PackageLicenseExpression></PackageLicenseExpression>
-	  <RepositoryType>git</RepositoryType>
-	  <RepositoryUrl>https://github.com/asienicki/PESEL</RepositoryUrl>
-	  <PackageReleaseNotes>Przeniosłem PeselAttribute do biblioteki: PESEL.System.ComponentModel.DataAnnotations</PackageReleaseNotes>
-	  <PackageTags></PackageTags>
-	  <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-	  <PackageReadmeFile>README.md</PackageReadmeFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+		<LangVersion>14.0</LangVersion>
 
+		<Title>PESEL.System.ComponentModel.DataAnnotations</Title>
+		<Description>Atrybut walidacji numeru PESEL oparty o System.ComponentModel.DataAnnotations.</Description>
+		<Summary>Atrybut walidacji numeru PESEL oparty o System.ComponentModel.DataAnnotations.</Summary>
+
+		<Company>Sharp Code</Company>
+		<Authors>Artur Sienicki</Authors>
+		<Copyright>Sharp Code</Copyright>
+
+		<PackageProjectUrl>https://github.com/asienicki/PESEL</PackageProjectUrl>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/asienicki/PESEL</RepositoryUrl>
+
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageTags>PESEL,validation,dataannotations,poland,identity</PackageTags>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+
+	<!-- README do paczki -->
 	<ItemGroup>
-		<None Include="..\LICENSE.md">
-			<Pack>True</Pack>
-			<PackagePath></PackagePath>
-		</None>
+		<None Include="README.md" Pack="true" />
 	</ItemGroup>
-	
-	<ItemGroup>
-		<None Include="README.md" Pack="true" PackagePath="\"/>
+
+	<!-- Lokalny development -->
+	<ItemGroup Condition="'$(IsPacking)' != 'true'">
+		<ProjectReference Include="..\PESEL\PESEL.csproj" />
 	</ItemGroup>
-	
+
+	<!-- Publikacja do NuGet -->
+	<ItemGroup Condition="'$(IsPacking)' == 'true'">
+		<PackageReference Include="PESEL" Version="2.0.1" />
+	</ItemGroup>
+
+	<!-- Pozostałe zależności -->
 	<ItemGroup>
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-		<PackageReference Include="PESEL" Version="2.0.0" />
 	</ItemGroup>
-	
+
 </Project>
