--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
             --no-build \
             /p:CollectCoverage=true \
             /p:CoverletOutput=$(pwd)/coverage/ \
-            /p:CoverletOutputFormat="opencover,cobertura"
+            /p:CoverletOutputFormat=opencover
 
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
