--- a/PESEL.System.ComponentModel.DataAnnotations/PESEL.System.ComponentModel.DataAnnotations.csproj
+++ b/PESEL.System.ComponentModel.DataAnnotations/PESEL.System.ComponentModel.DataAnnotations.csproj
@@ -23,7 +23,7 @@
 
 	<!-- README do paczki -->
 	<ItemGroup>
-		<None Include="README.md" Pack="true" />
+		<None Include="README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<!-- Lokalny development -->
