--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,15 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - rc
+      - "feat/**"
+      - "fix/**"
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - rc
 
 jobs:
   build-test:
