#24 fix: resolve SonarCloud findings and improve code quality & remove obsolete public APIs

--- a/PESEL.Generator/PESEL.Generator.csproj
+++ b/PESEL.Generator/PESEL.Generator.csproj
@@ -35,5 +35,8 @@
 	<ItemGroup Condition="'$(IsPacking)' == 'true'">
 		<PackageReference Include="PESEL" Version="2.0.1" />
 	</ItemGroup>
-
+	
+	<ItemGroup>
+		<InternalsVisibleTo Include="Pesel.Tests" />
+	</ItemGroup>
 </Project>
