--- a/.github/workflows/ci-jobs/sonar.yml
+++ b/.github/workflows/ci-jobs/sonar.yml
@@ -13,7 +13,11 @@ on:
 
 jobs:
   sonar:
-    if: github.ref == format('refs/heads/{0}', inputs.branch)
+    if: |
+      (github.event_name == 'push' && github.ref == 'refs/heads/master') ||
+      (github.event_name == 'pull_request' && (github.base_ref == 'master' || github.base_ref == 'rc'))
+
+
     runs-on: ubuntu-latest
     permissions:
       contents: read
