ci: pass sonar.login to sonarscanner end step (#31)

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -57,4 +57,4 @@ jobs:
       - name: Sonar End
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: dotnet sonarscanner end
+        run: dotnet sonarscanner end /d:sonar.login="${SONAR_TOKEN}"
