--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,7 +2,7 @@ name: CodeQL
 
 on:
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "rc", "release" ]
   schedule:
     - cron: '0 3 * * 0' # raz w tygodniu
 
