fix: trust forwarded headers behind reverse proxy and publish Docker image on release (#52)
- enable forwarded headers handling for HTTPS behind Traefik
- remove HTTPS redirection from container runtime
- add Docker build & push step to release workflow using release version tags

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,6 +100,23 @@ jobs:
             --source https://api.nuget.org/v3/index.json \
             --skip-duplicate
 
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & push Docker image (Release)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: |
+            ghcr.io/asienicki/pesel:latest
+            ghcr.io/asienicki/pesel:${{ steps.version.outputs.version }}
+
       - name: Tag release
         run: |
           set -euo pipefail
